# solidity

./: .gitignore  Makefile
ERC1363/: .gitignore  Readme.md  foundry.toml
ERC1363/src/: NFTToken.sol  PayableToken.sol
ERC1363/test/: PayableToken.t.sol
week1/: .gitignore  Makefile  R1-ERC777-ERC1363.md  R2-SafeERC20.md  foundry.toml  package-lock.json
week1/script/: DeployTokenWithSanctions.s.sol
week1/src/: BondingCurve.sol  SimpleCrowdSale.sol  TokenGodMode.sol  TokenWithSanctions.sol
week1/test/: TokenWithSanctionsTest.t.sol
week22/: EIP712.md  Makefile
week22/doubletake-ctf/: DoubleTake.sol  doubletake.js
week22/ecdsa/: foundry.toml
week22/ecdsa/script/: DeploytSignatureVulnerabilities.s.sol
week22/ecdsa/src/: SignatureVulnerabilities.sol  Verifier.sol
week22/ecdsa/test/: SignatureVulnerabilities.t.sol  Verifier.t.sol
week22/exercise2_get_pk_from_tx/: Cargo.toml  readme.md
week22/exercise2_get_pk_from_tx/src/: Some(Transaction { hash: 0xf25e29a951681  main.rs
week22/offchain-signing/: package.json
week22/offchain-signing-simple/: index.html  index.js  index.sol
week22/offchain-signing/src/: wagmi.ts
week22/offchain-signing/src/components/: SignTypedData.tsx
