[package]
name = "exercise2_get_pk_from_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
ethers = { version = "2.0", features = ["rustls", "ws","ipc"] }
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"